--- a/paper.tex
+++ b/paper.tex
@@ -32,77 +32,7 @@
 
 \maketitle
 
-
-%%%%%%%%%%%%%%%% abstract %%%%%%%%%%%%%%%
-\begin{abstract}
-
-El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. El texto del resumen de este documento. 
-
-\end{abstract}
-
-
-
-%%%%%%%%%%%%%%%% Introduction %%%%%%%%%%%%%%%
-\section{Primera Sección}
-\label{sec:uno}
-
-El texto de la primera sección. Ahora \emph{texto en cursiva}. El texto de la primera sección. El texto de la primera sección. El texto de la primera sección. El texto de la primera sección. 
-
-El texto de la primera sección. El texto de la primera sección Y una referencia bibliográfica a un libro \cite{Rumelhart}.
-
-El texto de la primera sección. El texto de la primera sección Y una referencia bibliográfica a un artículo \cite{heli1}.
-
-Una enumeración:
-
-\begin{enumerate}
-	\item un item.
-	\item otro item.
-	\item tercer item.
-\end{enumerate}
-
-
-%%%%%%%%%%%%%%%% Method %%%%%%%%%%%%%%%
-\section{Segunda Sección}
-\label{sec:dos}
-
-El texto de la segunda sección. El texto de la segunda sección. El texto de la segunda sección. El texto de la segunda sección. El texto de la segunda sección. Ahora \textbf{texto en negrita}. El texto de la segunda sección. El texto de la segunda sección. El texto de la segunda sección. 
-
-El texto de la segunda sección. El texto de la segunda sección Y referencia a la Sección \ref{sec:uno}.
-
-Vamos a incluir la Figura \ref{fig:image} (es un archivo en formato .EPS)
-
-\begin{figure}
-\begin{center}
-\includegraphics{image.eps} \\
-\caption{\small{El texto del pie de figura.}}
-\label{fig:image}
-\end{center}
-\end{figure}
-
-Y finalmente, mostramos la Tabla \ref{table:tabla}.
-
-\begin{table}
-\begin{center}
-\begin{tabular}{|c|c|c|}
-\hline 
-título 1 & título 2 & título 3  \\
-\hline
-\hline
-columna 1 & columna 2 & columna 3  \\
-\hline
-columna 1 & columna 2 & columna 3  \\
-\hline
-columna 1 & columna 2 & columna 3  \\
-\hline
-columna 1 & columna 2 & columna 3  \\
-\hline
-\end{tabular}
-\end{center}
-\caption{\small{El texto del pie de tabla.}}
-\label{table:tabla}
-\end{table}
-
-
+\input{openaccess.tex}
 %%%%%%%%%%%%%% Bibliografy %%%%%%%%%%%%%%%
 \bibliographystyle{plain}
 \bibliography{refs}
