--- a/paper.tex
+++ b/paper.tex
@@ -6,7 +6,8 @@
 \documentclass{llncs}
 \usepackage{graphics}
 \usepackage[dvips]{epsfig}
-\usepackage[utf8]{inputenc} %tildes
+\usepackage[utf8x]{inputenc} %tildes
+\usepackage[T1]{fontenc}
 %\usepackage[latin1]{inputenc} % tildes
 
 \def\CC{{C\hspace{-.05em}\raisebox{.4ex}{\tiny\bf ++}}~}
