--- a/openaccess.tex
+++ b/openaccess.tex
@@ -1,6 +1,8 @@
 \section{Introducción}
 \section{Amenazas y desafios}
 
+Antes de la era de la información y tecnología, el rol de las revistas científicas era múltiple. El principal era la divulgación de las investigaciones científicas. Las revistas cobraban el coste de la maquetación, el cual no era sencillo para matemáticas, el coste de publicar en formato físico y el de distribución de los mismos a los suscriptores. En la era digital, nada de esto supone un coste tan elevado.
+
 
 
 \section{Soluciones o Iniciativas}
