Avances en iniciativas

--- a/openaccess.tex
+++ b/openaccess.tex
@@ -1,5 +1,25 @@
 \section{Introducción}
 \section{Amenazas y desafios}
-\section{Soluciones o Iniciativas}
+\section{Soluciones e iniciativas}
+
+Desde la publicación del manifiesto de la Budapest OA Initiative \cite{boai} en 2002, han surgido distintas iniciativas que tratan de promover la publicación científica en acceso abierto. Estos estímulos proceden de distintas fuentes, tanto del ámbito gubernamental como el editorial, e incluso de personas concretas cuyos proyectos han afectado al curso del acceso libre a la ciencia.
+
+\subsection{Iniciativas investigadoras}
+
+Diferentes editoriales han puesto en marcha la creación de revistas de acceso abierto (\textit{Open Access Journals, OAJ}). El primer OAJ fue \textit{New Horizons in Adult Education} de la editorial Wiley \cite{earlyoaj}, fundado en 1987. Le siguieron \textit{Psycoloquy} y \textit{Public Access-Computer Systems Review} en 1989. A partir de 1990, fueron surgiendo más OAJs de forma incremental. En la actualidad, el \textit{Directory of Open Access Journals}\footnote{Disponible en \url{https://doaj.org/}, accedido el 29 de noviembre de 2017.} contabiliza un total de 10544 revistas de acceso abierto.
+
+Glossa vs Lingua.
+
+- BioMed Central
+- Nucleic Acids Research (OUP)
+- Molecular Systems Biology (Nature)
+
+\subsection{Legislación a favor de Open Access}
+
+Holanda, Noruega, UE \cite{enserink2016dramatic}
+
+\subsection{Iniciativas independientes}
+
+Swartz, Sci-Hub
+
 \section{Conclusiones}
-\section{Referencias}
