--- a/paper.tex
+++ b/paper.tex
@@ -6,8 +6,10 @@
 \documentclass{llncs}
 \usepackage{graphics}
 \usepackage[dvips]{epsfig}
+\usepackage[spanish]{babel}
 \usepackage[utf8x]{inputenc} %tildes
 \usepackage[T1]{fontenc}
+\usepackage{hyperref}
 %\usepackage[latin1]{inputenc} % tildes
 
 \def\CC{{C\hspace{-.05em}\raisebox{.4ex}{\tiny\bf ++}}~}
@@ -35,7 +37,7 @@
 
 \input{openaccess.tex}
 %%%%%%%%%%%%%% Bibliografy %%%%%%%%%%%%%%%
-\bibliographystyle{plain}
+\bibliographystyle{splncs}
 \bibliography{refs}
 
 \end{document}
