--- a/refs.bib
+++ b/refs.bib
@@ -1,16 +1,30 @@
-
-@Book{Rumelhart,
-  author =    "D. Rumelhart and J. McClelland",
-  title =     "Parallel Distributed Processing",
-  publisher = "MIT Press, Cambridge, MA",
-  year =      1986
+@article{enserink2016dramatic,
+  title={In dramatic statement, European leaders call for 'immediate' open access to all scientific papers by 2020},
+  author={Enserink, Martin},
+  journal={Science},
+  year={2016}
 }
 
-@Article         {heli1,
-        author = {R. Marabini and J.M. Carazo},
-         title = {Pattern recognition and classification of images of
-                  biological macromolecules using artificial neural networks.},
-       journal = {Biophysics Journal, 66:1904-1814},
-          year = 1994
+@online{boai,
+    author = {Chan, Leslie and Cuplinskas, Darius and Eisen, Michael and Friend, Fred and Genova, Yana and Gu\'{e}don, Jean-Claude and Hagemann, Melissa and Harnad, Stevan and Johnson, Rick and Kupryte, Rima and La Manna, Manfredi and R\'{e}v, Istv\'{a}n and Segbert, Monika and de Souza, Sidnei and Suber, Peter and Velterop, Jan},
+    citeulike-article-id = {11855295},
+    citeulike-linkout-0 = {http://www.opensocietyfoundations.org/openaccess/read},
+    day = {14},
+    keywords = {free-access, open-access, redistributable-scientific-information, scientific-communication},
+    month = feb,
+    posted-at = {2012-12-23 16:36:43},
+    title = {{Budapest Open Access Initiative}},
+    url = {http://www.opensocietyfoundations.org/openaccess/read},
+    howpublished = {\url{http://www.opensocietyfoundations.org/openaccess/read}},
+    year = {2002}
 }
-
+@misc{earlyoaj,
+    howpublished = {\url{http://oad.simmons.edu/oadwiki/Early_OA_journals}},
+    url = {http://oad.simmons.edu/oadwiki/Early_OA_journals},
+    posted-at = {2012-02-03},
+    year = {2002},
+    author = {{Open Access Directory}},
+    title = {{Early OA Journals}},
+    journal = {{Open Access Directory}},
+    publisher = {Simmons College}
+ }
