--- a/refs.bib
+++ b/refs.bib
@@ -28,3 +28,30 @@
     journal = {{Open Access Directory}},
     publisher = {Simmons College}
  }
+
+@article{nordic,
+  title={Scholarly publishing and open access in the Nordic countries},
+  author={Hedlund, Turid and Rabow, Ingegerd},
+  journal={Learned Publishing},
+  volume={22},
+  number={3},
+  pages={177--186},
+  year={2009},
+  publisher={Association of Learned and Professional Society Publishers}
+}
+
+@online{costknowledge,
+  howpublished = {\url{https://gowers.files.wordpress.com/2012/02/elsevierstatementfinal.pdf}},
+  url = {https://gowers.files.wordpress.com/2012/02/elsevierstatementfinal.pdf},
+  title = {The cost of knowledge},
+  author = {Aaronson, Scott and others}
+}
+
+@misc{linguaglossia,
+  howpublished = {\url{http://languagelog.ldc.upenn.edu/nll/?p=22162}},
+  url = {http://languagelog.ldc.upenn.edu/nll/?p=22162},
+  title = {{Lingua} is dead. Long live {Glossia}!},
+  author = {Eric Baković},
+  journal = {Language Log},
+  publisher = {University of Pennsylvania}
+ }
