--- a/refs.bib
+++ b/refs.bib
@@ -47,10 +47,10 @@
   author = {Aaronson, Scott and others}
 }
 
-@misc{linguaglossia,
+@misc{linguaglossa,
   howpublished = {\url{http://languagelog.ldc.upenn.edu/nll/?p=22162}},
   url = {http://languagelog.ldc.upenn.edu/nll/?p=22162},
-  title = {{Lingua} is dead. Long live {Glossia}!},
+  title = {{Lingua} is dead. Long live {Glossa}!},
   author = {Eric Baković},
   journal = {Language Log},
   publisher = {University of Pennsylvania}
