--- a/openaccess.tex
+++ b/openaccess.tex
@@ -15,7 +15,7 @@ Diferentes editoriales han puesto en marcha la creación de revistas de acceso a
   
 \end{figure}
 
-Otra de las iniciativas que han marcado un impacto en el progreso del acceso abierto ha sido el boicot a editoriales y lobbies anti-Open Access, como Elsevier \cite{costknowledge}. En particular, una de las acciones más dañinas fue la renuncia del equipo editorial al completo del conocido journal \textit{Lingua} de Elsevier sobre lingüística, para después fundar un nuevo OAJ orientado a la misma temática, \textit{Glossia} \cite{linguaglossia}.
+Otra de las iniciativas que han marcado un impacto en el progreso del acceso abierto ha sido el boicot a editoriales y lobbies anti-Open Access, como Elsevier \cite{costknowledge}. En particular, una de las acciones más dañinas fue la renuncia del equipo editorial al completo del conocido journal \textit{Lingua} de Elsevier sobre lingüística, para después fundar un nuevo OAJ orientado a la misma temática, \textit{Glossa} \cite{linguaglossa}.
 
 %- BioMed Central
 %- Nucleic Acids Research (OUP)
@@ -29,7 +29,7 @@ Holanda, Noruega, UE \cite{enserink2016dramatic}
 
 Swartz, Sci-Hub
 
-\section{Conclusiones}
+\section{Conclusiones} % o Comentarios finales
 
 Antes de la era de la información y tecnología, el rol de las revistas científicas era múltiple. El principal era la divulgación de las investigaciones científicas. Las revistas cobraban el coste de la maquetación, el cual no era sencillo para matemáticas, el coste de publicar en formato físico y el de distribución de los mismos a los suscriptores. En la era digital, nada de esto supone un coste tan elevado.
 
