Elimina bordes de enlaces

--- a/paper.tex
+++ b/paper.tex
@@ -9,7 +9,7 @@
 \usepackage[spanish]{babel}
 \usepackage[utf8x]{inputenc} %tildes
 \usepackage[T1]{fontenc}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 %\usepackage[latin1]{inputenc} % tildes
 
 \def\CC{{C\hspace{-.05em}\raisebox{.4ex}{\tiny\bf ++}}~}
