Metadatos y propuesta de título

--- a/paper.tex
+++ b/paper.tex
@@ -18,15 +18,15 @@
 
 
 %%%%%%%%%%%%%%%% Título %%%%%%%%%%%%%%%
-\title{El título del documento}
+\title{Open Access: revisión histórica y situación actual}
 
-\author { Nombre Apellido \inst{1} }
+\author{ Cristina Heredia\inst{*} \and Alejandro Alcalde\inst{*} \and David Charte\thanks{Contribución equitativa} }
 
 \institute{
-           Departamento \\
-           Universidad \\
-           Direcc. \\
-           e-mail: {\tt email@dominio.com}
+           Departamento de Ciencias de la Computación e Inteligencia Artificial \\
+           Universidad de Granada \\
+           Granada, España. \\
+           {\tt \{CRIS,ALEX,fdavidcl\}@correo.ugr.es}
 }
 
 \date{} 
