Sección de iniciativas

--- a/openaccess.tex
+++ b/openaccess.tex
@@ -4,9 +4,9 @@
 
 Desde la publicación del manifiesto de la Budapest OA Initiative \cite{boai} en 2002, han surgido distintas iniciativas que tratan de promover la publicación científica en acceso abierto. Estos estímulos proceden de distintas fuentes, tanto del ámbito gubernamental como el editorial, e incluso de personas concretas cuyos proyectos han afectado al curso del acceso libre a la ciencia.
 
-\subsection{Iniciativas investigadoras}
+\subsection{Iniciativas en el ámbito de la investigación}
 
-Diferentes editoriales han puesto en marcha la creación de revistas de acceso abierto (\textit{Open Access Journals, OAJ}). El primer OAJ fue \textit{New Horizons in Adult Education} de la editorial Wiley \cite{earlyoaj}, fundado en 1987. Le siguieron \textit{Psycoloquy} y \textit{Public Access-Computer Systems Review} en 1989. A partir de 1990, fueron surgiendo más OAJs de forma incremental. En la actualidad, el \textit{Directory of Open Access Journals}, creado y mantenido originalmente por la universidad de Lund \cite{nordic}, \footnote{Disponible en \url{https://doaj.org/}, accedido el 29 de noviembre de 2017.} contabiliza un total de 10544 revistas de acceso abierto. En la fig.~\ref{fig:doaj} se muestra el total de OAJs que se han puesto a disposición pública en el directorio a lo largo del tiempo. Se puede observar que el crecimiento se acentúa progresivamente conforme avanzan los años.
+Diferentes editoriales han puesto en marcha la creación de revistas de acceso abierto (\textit{Open Access Journals, OAJ}). El primer OAJ fue \textit{New Horizons in Adult Education} de la editorial Wiley \cite{earlyoaj}, fundado en 1987. Le siguieron \textit{Psycoloquy} y \textit{Public Access-Computer Systems Review} en 1989. A partir de 1990, fueron surgiendo más OAJs de forma incremental. En la actualidad, el \textit{Directory of Open Access Journals}\footnote{Disponible en \url{https://doaj.org/}, accedido el 29 de noviembre de 2017.}, creado y mantenido originalmente por la universidad de Lund \cite{nordic}, contabiliza un total de 10544 revistas de acceso abierto. En la fig.~\ref{fig:doaj} se muestra el total de OAJs que se han puesto a disposición pública en el directorio a lo largo del tiempo. Se puede observar que el crecimiento se acentúa progresivamente conforme avanzan los años.
 
 \begin{figure}[htbp]
   \centering
@@ -15,19 +15,37 @@ Diferentes editoriales han puesto en marcha la creación de revistas de acceso a
   
 \end{figure}
 
-Otra de las iniciativas que han marcado un impacto en el progreso del acceso abierto ha sido el boicot a editoriales y lobbies anti-Open Access, como Elsevier \cite{costknowledge}. En particular, una de las acciones más dañinas fue la renuncia del equipo editorial al completo del conocido journal \textit{Lingua} de Elsevier sobre lingüística, para después fundar un nuevo OAJ orientado a la misma temática, \textit{Glossa} \cite{linguaglossa}.
+Otra de las iniciativas que han marcado un impacto en el progreso del acceso abierto ha sido el boicot a editoriales y lobbies anti-Open Access, como Elsevier \cite{costknowledge}. En particular, una de las acciones más impactantes fue la renuncia del equipo editorial al completo del conocido journal \textit{Lingua} de Elsevier sobre lingüística, para después fundar un nuevo OAJ orientado a la misma temática, \textit{Glossa} \cite{linguaglossa}.
 
 %- BioMed Central
 %- Nucleic Acids Research (OUP)
 %- Molecular Systems Biology (Nature)
 
-\subsection{Legislación a favor de Open Access}
+\subsection{Legislación a favor del Open Access}
 
-Holanda, Noruega, UE \cite{enserink2016dramatic}
+
+Estados Unidos aprobó en 2013 el \textit{Fair Access to Science and Technology Research Act} \cite{fastr}, que implica que las agencias gubernamentales que destinen más de 100 millones de dólares anuales a investigación deben publicar los resultados para acceso abierto en un plazo razonable. % Asimismo, el National Institutes of Health publica toda la investigación obtenida en PubMed Central en menos de 12 meses.
+
+Reino Unido tiene vigente desde 2012 una legislación que fuerza a que todo el trabajo financiado por el Department for International Development sea publicado de forma abierta en un plazo de 2 años desde su publicación en revista \cite{ukdifd}. Además, los Research Councils proporcionan financiación a las instituciones académicas para sufragar los costes de publicación en Open Access tipo Gold\cite{rcuk}.
+
+En la Unión Europea han puesto en marcha acuerdos que llevarían a una legislación que permitiría tener todas las publicaciones científicas financiadas de forma pública accesibles libremente para el año 2020 \cite{enserink2016dramatic}. Este proyecto surge de una llamada a la acción por parte del gobierno neerlandés \cite{amsterdam}.
 
 \subsection{Iniciativas independientes}
 
-Swartz, Sci-Hub
+Algunas de las acciones más notorias a favor del Open Access han sido propiciadas por activistas individuales. Aaron Swartz fue un activista que escribió el Guerilla Open Access Manifesto \cite{goam} a favor del libre intercambio de todo tipo de conocimiento, y en particular del obtenido a partir de la investigación científica. Alrededor de este manifiesto ha surgido un movimiento homónimo \cite{pirates}, con diferentes iniciativas y ataques a los obstáculos al libre acceso a la investigación.
+
+El servicio web Sci-Hub\footnote{Disponible en \url{https://sci-hub.bz} en el momento en que se escribió este trabajo, previamente accesible en \url{https://sci-hub.cc} y \url{https://sci-hub.io}}, desarrollado en 2011 por Alexandra Elbakyan, es un buscador de publicaciones científicas que accede a los portales de descarga de las mismas mediante credenciales filtradas de distintas instituciones \cite{himmelstein-scihub}, de forma que el usuario puede descargarlas sin estar identificado en una institución suscrita a la revista correspondiente. El impacto de Sci-Hub ha sido notable, tanto que algunos analistas presagian el fin de las publicaciones académicas bajo suscripción \cite{sciencescihub}.
+
+%% \begin{quote}
+%%  We need to take information, wherever it is stored, make our copies and share them with 
+%% the world. We need to take stuff that's out of copyright and add it to the archive. We need 
+%% to buy secret databases and put them on the Web. We need to download scientific 
+%% journals and upload them to file sharing networks.
+
+%% --- Aaron Swartz, Guerilla Open Access Manifesto \cite{goam}
+%% \end{quote}
+
+
 
 \section{Conclusiones} % o Comentarios finales
 
