--- a/refs.bib
+++ b/refs.bib
@@ -1,7 +1,7 @@
-@article{enserink2016dramatic,
+@online{enserink2016dramatic,
   title={In dramatic statement, European leaders call for 'immediate' open access to all scientific papers by 2020},
   author={Enserink, Martin},
-  journal={Science},
+  howpublished={Science \url{https://doi.org/10.1126/science.aag0577}},
   year={2016}
 }
 
@@ -55,3 +55,60 @@
   journal = {Language Log},
   publisher = {University of Pennsylvania}
  }
+@misc{goam,
+  title={Guerilla open access manifesto},
+  author={Swartz, Aaron},
+  year={2008},
+  howpublished={\url{https://archive.org/stream/GuerillaOpenAccessManifesto/Goamjuly2008_djvu.txt}}
+}
+@techreport{himmelstein-scihub,
+  title={Sci-Hub provides access to nearly all scholarly literature},
+  author={Himmelstein, Daniel S and Romero, Ariel R and McLaughlin, Stephen R and Tzovaras, Bastian Greshake and Greene, Casey S},
+  year={2017},
+  institution={PeerJ Preprints}
+}
+
+@inproceedings{pirates,
+  title = {Pirates in the Library – An Inquiry into the Guerilla Open Access Movement},
+  author = {Bodó, Balázs},
+  booktitle = {8th Annual Workshop of the International Society for the History and Theory of Intellectual Property, CREATe},
+  publisher = {University of Glasgow}
+  year = {2016}
+  howpublished = {Available at SSRN: \url{http://dx.doi.org/10.2139/ssrn.2816925}}
+}
+
+@online{sciencescihub,
+  title = {Sci-Hub’s cache of pirated papers is so big, subscription journals are doomed, data analyst suggests},
+  author = {McKenzie, Lindsay},
+  howpublished = {Science \url{https://doi.org/10.1126/science.aan7164}},
+  journal = {Science},
+  year = {2017},
+  }
+
+@misc{amsterdam,
+  title={Amsterdam call for action on open science},
+  author={{Netherlands, EU}},
+  year={2016},
+  howpublished = {\url{https://wiki.surfnet.nl/display/OSCFA/Amsterdam+Call+for+Action+on+Open+Science}},
+}
+
+@misc{fastr,
+  title={Fair Access to Science and Technology Research Act of 2015},
+  author = {{US Congress}},
+  year = {2015},
+  howpublished={\url{https://www.congress.gov/bill/114th-congress/house-bill/1477/text}}
+}
+
+@article{ukdifd,
+title={ UK government will enforce open access to development research },
+author={Jha, Alok},
+journal = {The Guardian},
+year = {2012},
+publisher = {Guardian News and Media Limited}
+}
+@misc{rcuk,
+title = {{RCUK} announces block grants for universities to aid drives to open access to research outputs},
+howpublished = {\url{http://www.rcuk.ac.uk/media/news/121108/}},
+author = {{Research Councils UK}},
+year = {2013}
+}
