--- a/openaccess.tex
+++ b/openaccess.tex
@@ -1,5 +1,8 @@
 \section{Introducción}
 \section{Amenazas y desafios}
+
+Antes de la era de la información y tecnología, el rol de las revistas científicas era múltiple. El principal era la divulgación de las investigaciones científicas. Las revistas cobraban el coste de la maquetación, el cual no era sencillo para matemáticas, el coste de publicar en formato físico y el de distribución de los mismos a los suscriptores. En la era digital, nada de esto supone un coste tan elevado. Sin embargo, ahora ya no tiene sentido.
+
 \section{Soluciones e iniciativas}
 
 Desde la publicación del manifiesto de la Budapest OA Initiative \cite{boai} en 2002, han surgido distintas iniciativas que tratan de promover la publicación científica en acceso abierto. Estos estímulos proceden de distintas fuentes, tanto del ámbito gubernamental como el editorial, e incluso de personas concretas cuyos proyectos han afectado al curso del acceso libre a la ciencia.
@@ -45,10 +48,4 @@ El servicio web Sci-Hub\footnote{Disponible en \url{https://sci-hub.bz} en el mo
 %% --- Aaron Swartz, Guerilla Open Access Manifesto \cite{goam}
 %% \end{quote}
 
-
-
-\section{Conclusiones} % o Comentarios finales
-
-Antes de la era de la información y tecnología, el rol de las revistas científicas era múltiple. El principal era la divulgación de las investigaciones científicas. Las revistas cobraban el coste de la maquetación, el cual no era sencillo para matemáticas, el coste de publicar en formato físico y el de distribución de los mismos a los suscriptores. En la era digital, nada de esto supone un coste tan elevado.
-
-https://www.theguardian.com/science/2017/jun/27/profitable-business-scientific-publishing-bad-for-science
+\section{Conclusiones}
