terminada sección amenazas e intro

--- a/openaccess.tex
+++ b/openaccess.tex
@@ -1,7 +1,26 @@
 \section{Introducción}
-\section{Amenazas y desafios}
 
-Antes de la era de la información y tecnología, el rol de las revistas científicas era múltiple. El principal era la divulgación de las investigaciones científicas. Las revistas cobraban el coste de la maquetación, el cual no era sencillo para matemáticas, el coste de publicar en formato físico y el de distribución de los mismos a los suscriptores. En la era digital, nada de esto supone un coste tan elevado. Sin embargo, ahora ya no tiene sentido.
+Antes de la era de la información y tecnología, el rol de las revistas científicas era múltiple. El principal era la divulgación de las investigaciones científicas. Las revistas cobraban el coste de la maquetación, el cual no era sencillo para matemáticas, el coste de publicar en formato físico y el de distribución de los mismos a los suscriptores. En la era digital, nada de esto supone un coste tan elevado. De hecho, ahora son los propios investigadores quienes maquetan el documento de forma electrónica, el coste de publicar y distribuir no es para nada comparable con los del pasado. Y lo más importante, la divulgación de las investigaciones ya no se hace de forma física, si no electrónica. Esto no quiere decir que la divulgación sea gratuita, si no que es mucho más barata.
+
+En resumen, el coste de publicación para una revista se ha desplomado debido a que la maquetación han pasado a hacerla los autores y la publicación y distribución ha decrementado significativamente. Por contra, la cantidad de dinero que gastan las bibliotecas universitarias en revistas se ha incrementado. La pregunta entonces es, ¿Por qué siguen los científicos haciendo la labor de revisores y editores de forma volutaria, mientras las universidades pagan todo ese dinero por un servicio que no justifica ese coste?
+
+Esto se debe principalmente a cómo funciona el mundo académico. En resumen, si un investigador quiere avanzar en su carrera, debe tener publicaciones de calidad en revistas de calidad. Por esta razón es difícil cambiar a otro modelo. Una razón es que no es posible crear una nueva revista y esperar a que los investigadores publiquen en ella, ya que si no tiene reputación, no van a considerarla.
+
+A lo largo de esta revisión, nos centraremos en Elsevier\cite{costknowledge}, ya que es una de las revistas más problemática en este aspecto. La siguiente sección describe algunas amenazas que presenta el sistema actual.
+
+\section{Amenazas y escándalos}
+
+Tanto Elsevier, Springer como otras muchas editoriales explotan la labor voluntaria de los investigadores para obtener un beneficio económico muy elevado. Aunque proporcionan un servicio, el precio no está para nada justificado.
+
+Aunque Elsevier quizá no sea la más cara de todas, ha estado implicada en muchos escándalos que la ponen en el punto de mira. Es por ello que muchos investigadores han iniciado un boicot contra ella, como se menciona en la sección~\ref{sec:boicot}
+
+Comencemos con el problema del coste de la revista. Es difícil realizar comparaciones en este aspecto, ya que las distintas revistas varían en el número de páginas por volumen e incluso la cantidad de texto por páginas. Una aproximación tomada por \cite{costknowledge} es calcular el precio por página. Con esta métrica, la revista más rentable a la par que reputada es \textit{The Annals of Mathematics} con \$0.13/página. Elsevier sin embargo tiene un coste de \$1.30/página.
+
+Además de ser una de las más caras, Elsevier ha estado involucrada en una serie de escándalos que no la dejan en buen lugar con respecto a su contenido científico. Un ejemplo involucra a la revista \textit{Chaos, Solitions \& Fractals}, una de las revistas con mayor factor de impacto hasta que se descubrió el escándalo. Este gran factor de impacto se debía a que la revista publicaba muchos papers llenos de citaciones mutuas, además de ser el contenido de dichos papers poco rigurosos.
+
+Elsevier se vio implicado en otro escándalo, esta vez en el campo de la medicina, en el que recibió dinero de la industria farmacéutica para publicar una serie de artículos patrocinados.
+
+Los ejemplos anteriores son solo una demostración de los tipos de escándalos en los que Elsevier ha estado involucrada, hay bastantes más. Esto demuestra que Elsevier solo quiere ganar dinero, y no está interesada realmente en el avance científico.
 
 \section{Soluciones e iniciativas}
 
@@ -15,9 +34,10 @@ Diferentes editoriales han puesto en marcha la creación de revistas de acceso a
   \centering
   \includegraphics[width=0.8\textwidth]{doaj_years.png}
   \caption{\label{fig:doaj}Total de OAJs listados en el \textit{Directory of Open Access Journals} desde su creación en 2002. Datos de \url{https://doaj.org/csv}}
-  
+
 \end{figure}
 
+\label{sec:boicot}
 Otra de las iniciativas que han marcado un impacto en el progreso del acceso abierto ha sido el boicot a editoriales y lobbies anti-Open Access, como Elsevier \cite{costknowledge}. En particular, una de las acciones más impactantes fue la renuncia del equipo editorial al completo del conocido journal \textit{Lingua} de Elsevier sobre lingüística, para después fundar un nuevo OAJ orientado a la misma temática, \textit{Glossa} \cite{linguaglossa}.
 
 %- BioMed Central
@@ -40,9 +60,9 @@ Algunas de las acciones más notorias a favor del Open Access han sido propiciad
 El servicio web Sci-Hub\footnote{Disponible en \url{https://sci-hub.bz} en el momento en que se escribió este trabajo, previamente accesible en \url{https://sci-hub.cc} y \url{https://sci-hub.io}}, desarrollado en 2011 por Alexandra Elbakyan, es un buscador de publicaciones científicas que accede a los portales de descarga de las mismas mediante credenciales filtradas de distintas instituciones \cite{himmelstein-scihub}, de forma que el usuario puede descargarlas sin estar identificado en una institución suscrita a la revista correspondiente. El impacto de Sci-Hub ha sido notable, tanto que algunos analistas presagian el fin de las publicaciones académicas bajo suscripción \cite{sciencescihub}.
 
 %% \begin{quote}
-%%  We need to take information, wherever it is stored, make our copies and share them with 
-%% the world. We need to take stuff that's out of copyright and add it to the archive. We need 
-%% to buy secret databases and put them on the Web. We need to download scientific 
+%%  We need to take information, wherever it is stored, make our copies and share them with
+%% the world. We need to take stuff that's out of copyright and add it to the archive. We need
+%% to buy secret databases and put them on the Web. We need to download scientific
 %% journals and upload them to file sharing networks.
 
 %% --- Aaron Swartz, Guerilla Open Access Manifesto \cite{goam}
