--- a/paper.tex
+++ b/paper.tex
@@ -1,6 +1,6 @@
 %
 % PARA COMPILARLO Y CREAR EL PDF
-%    pdflatex paper.tex && pdflatex paper.tex && pdflatex paper.tex 
+%    pdflatex paper.tex && pdflatex paper.tex && pdflatex paper.tex
 %
 
 \documentclass{llncs}
@@ -26,10 +26,10 @@
            Departamento de Ciencias de la Computación e Inteligencia Artificial \\
            Universidad de Granada \\
            Granada, España. \\
-           {\tt \{CRIS,ALEX,fdavidcl\}@correo.ugr.es}
+           {\tt \{CRIS,algui91,fdavidcl\}@correo.ugr.es}
 }
 
-\date{} 
+\date{}
 
 \begin{document}
 
