Cohesiona el texto, corrige erratas

--- a/openaccess.tex
+++ b/openaccess.tex
@@ -1,14 +1,16 @@
 \section{Introducción}
 
-Antes de la era de la información y tecnología, el rol de las revistas científicas era múltiple. El principal era la divulgación de las investigaciones científicas. Las revistas cobraban el coste de la maquetación, el cual no era sencillo para matemáticas, el coste de publicar en formato físico y el de distribución de los mismos a los suscriptores. En la era digital, nada de esto supone un coste tan elevado. De hecho, ahora son los propios investigadores quienes maquetan el documento de forma electrónica, el coste de publicar y distribuir no es para nada comparable con los del pasado. Y lo más importante, la divulgación de las investigaciones ya no se hace de forma física, si no electrónica. Esto no quiere decir que la divulgación sea gratuita, si no que es mucho más barata.
+[Aquí la introducción de Cristina. Porfi introduce las \textit{paywalls}, el Open Access y sus tipos (Gold y Green)]
+
+La sección~\ref{amenazas} describe algunas amenazas que presenta el sistema actual, centrándose en Elsevier, que es una de las editoriales más problemática en este aspecto \cite{costknowledge}. A continuación, la sección~\ref{iniciativas} recoge iniciativas a favor del acceso abierto a la ciencia.
+
+\section{Modelo tradicional: problemática y escándalos}\label{amenazas}
+
+Antes de la era de la información y tecnología, el rol de las revistas científicas era múltiple. El principal era la divulgación de las investigaciones científicas. Las revistas cobraban el coste de la maquetación, el cual no era sencillo para matemáticas, el coste de publicar en formato físico y el de distribución de los mismos a los suscriptores. En la era digital, nada de esto supone un coste tan elevado. De hecho, ahora son los propios investigadores quienes maquetan el documento de forma electrónica, el coste de publicar y distribuir no es para nada comparable con los del pasado. Y lo más importante, la divulgación de las investigaciones ya no se hace de forma física, sino electrónica. Esto no quiere decir que la divulgación sea gratuita, si no que es mucho más barata.
 
 En resumen, el coste de publicación para una revista se ha desplomado debido a que la maquetación han pasado a hacerla los autores y la publicación y distribución ha decrementado significativamente. Por contra, la cantidad de dinero que gastan las bibliotecas universitarias en revistas se ha incrementado. La pregunta entonces es, ¿Por qué siguen los científicos haciendo la labor de revisores y editores de forma volutaria, mientras las universidades pagan todo ese dinero por un servicio que no justifica ese coste?
 
 Esto se debe principalmente a cómo funciona el mundo académico. En resumen, si un investigador quiere avanzar en su carrera, debe tener publicaciones de calidad en revistas de calidad. Por esta razón es difícil cambiar a otro modelo. Una razón es que no es posible crear una nueva revista y esperar a que los investigadores publiquen en ella, ya que si no tiene reputación, no van a considerarla.
-
-A lo largo de esta revisión, nos centraremos en Elsevier\cite{costknowledge}, ya que es una de las revistas más problemática en este aspecto. La siguiente sección describe algunas amenazas que presenta el sistema actual.
-
-\section{Amenazas y escándalos}
 
 Tanto Elsevier, Springer como otras muchas editoriales explotan la labor voluntaria de los investigadores para obtener un beneficio económico muy elevado. Aunque proporcionan un servicio, el precio no está para nada justificado.
 
@@ -22,7 +24,7 @@ Elsevier se vio implicado en otro escándalo, esta vez en el campo de la medicin
 
 Los ejemplos anteriores son solo una demostración de los tipos de escándalos en los que Elsevier ha estado involucrada, hay bastantes más. Esto demuestra que Elsevier solo quiere ganar dinero, y no está interesada realmente en el avance científico.
 
-\section{Soluciones e iniciativas}
+\section{Open Access: soluciones e iniciativas}\label{iniciativas}
 
 Desde la publicación del manifiesto de la Budapest OA Initiative \cite{boai} en 2002, han surgido distintas iniciativas que tratan de promover la publicación científica en acceso abierto. Estos estímulos proceden de distintas fuentes, tanto del ámbito gubernamental como el editorial, e incluso de personas concretas cuyos proyectos han afectado al curso del acceso libre a la ciencia.
 
@@ -68,4 +70,6 @@ El servicio web Sci-Hub\footnote{Disponible en \url{https://sci-hub.bz} en el mo
 %% --- Aaron Swartz, Guerilla Open Access Manifesto \cite{goam}
 %% \end{quote}
 
-\section{Conclusiones}
+\section{Comentarios finales}
+
+En este trabajo se ha estudiado el modelo tradicional de publicaciones científicas y los avances que ha habido a lo largo del tiempo para transformarlo en un modelo de acceso abierto. Se ha observado cómo el comportamiento de las editoriales que se aferran a las \textit{paywalls} no es siempre el más propicio para una ciencia rigurosa. Finalmente, se han analizado ataques al modelo tradicional e iniciativas en distintos campos, que podrían llevar a la ciencia a un futuro donde la investigación sea accesible para todas las personas.
