--- a/openaccess.tex
+++ b/openaccess.tex
@@ -1,6 +1,16 @@
 \section{Introducción}
 
-[Aquí la introducción de Cristina. Porfi introduce las \textit{paywalls}, el Open Access y sus tipos (Gold y Green)]
+Fue en 1665 cuando aparecieron las primeras revistas científicas en París y Londres y ya entonces a los autores no se les retribuía por publicar en ellas. El éxito de estas revistas tras su aparición fue directo, pues los lectores encontaron una forma de leer el trabajo de otras personas más rápido que leyendo un libro,  
+mientras que los autores vieron en ellas una buena oportunidad de compartir sus últimos trabajos con todo el mundo de forma rápida, y así poder ser priorizados entre otros científicos, por lo que comenzaron a escribir por impacto y no por dinero. Durante los años posteriores a su aparición, los precios de las revistas impresas crecieron hasta volverse inasequibles para la gran mayoría, y fortuitamente apareció internet para ofrecer una alternativa a tan elevados precios. Esta crisis de precios, junto con el aumento del número de publicaciones científicas, fue un factor importante en la aparición del \textbf{open access}.
+\newline
+\newline
+\textbf{Open access} es una forma de acceder a la información, por tanto no es un modelo de negocio, ni un tipo de licencia ni de contenido. En literatura de investigación, el open access se compone de copias online disponibles para todo el mundo y de forma gratuita de artículos, conferencias, informes técnicos, tesis y documentos de trabajo. Aunque en la mayoría de los casos no tienen restricciones de uso por parte de los usuarios, pudiendo usarse para investigar sobre ellos, docencia u otros propósitos, el open acces no es incompatible con el uso de copyright.\newline 
+Por tanto, el open access trata de ofrecer una alternativa mejor al modelo tradicional de publicación, en el que los autores pagan por publicar sus investigaciones y los lectores deben pagar, dependendiendo de la editorial, un precio significativo para poder accederlas, con el fin de romper esa barrera y hacer esa información accesible a personas o instituciones que no puedan afrontar pagar por ese conocimiento.
+\newline
+Las tres principales maneras de proveer open access por los investigadores, son: dejar una copia del artículo en un archivo o repositorio open access (por ejemplo arXiv), publicar en revistas open access (por ejemplo BioMed o las de Public Library of Science) o poner una copia del artículo en una web personal o de departamento. Otra forma de open access son las revistas "híbridas", donde el autor además de pagar por publicar, puede pagar por hacer su artículo accesible a todo el mundo online. Normalmente, las revistas open access usan un código de color para calificar las revistas, donde \textit{dorado} significa que provee open access sin retraso, \textit{verde} indica que permite el archivo de trabajos ya publicados, \textit{verde pálido} indica que permite el archivo de trabajos que se han mandado a revisión pero que aún no se hayan publicado, y \textit{gris} que indica que no cumple ninguna de las anteriores.
+
+ 
+
 
 La sección~\ref{amenazas} describe algunas amenazas que presenta el sistema actual, centrándose en Elsevier, que es una de las editoriales más problemática en este aspecto \cite{costknowledge}. A continuación, la sección~\ref{iniciativas} recoge iniciativas a favor del acceso abierto a la ciencia.
 
