--- a/paper.tex
+++ b/paper.tex
@@ -26,7 +26,7 @@
            Departamento de Ciencias de la Computación e Inteligencia Artificial \\
            Universidad de Granada \\
            Granada, España. \\
-           {\tt \{CRIS,algui91,fdavidcl\}@correo.ugr.es}
+           {\tt \{crstnheredia,algui91,fdavidcl\}@correo.ugr.es}
 }
 
 \date{}
